# Simplelibm

./: CMakeLists.txt  README.md  conanfile.txt  linux_debug.profile  linux_release.profile
bench/: CMakeLists.txt  bench.cc  results.csv
include/lalogf/: logf.h
include/math/: math.h
sollya_gen/: logf.sollya  minimax.sollya
src/: logf.cc
src/detail/: fpbits.hh
src/support/: bit_cast.hh  fpbits.hh
table_gen/: logf.sollya
tests/: CMakeLists.txt  graph.ipynb  test.ipynb  test.py  test_functions.py
tests/reports/: lalogf.csv  lalogf_avx512.csv
tests/src/: logf_avx512_test.cc  logf_test.cc  main.c  multiprecision.hh  report.cc
